--- a/assets/style.css
+++ b/assets/style.css
@@ -157,6 +157,7 @@ h1 {
     color: #fff;
     padding: 12px;
     border: 2px solid #fff;
+    text-align: center;
 }
 
 .reload {
@@ -166,4 +167,5 @@ h1 {
     color: #fff;
     padding: 12px;
     border: 2px solid #fff;
+    text-align: center;
 }
